Create HTML structure

--- a/index.html
+++ b/index.html
@@ -11,8 +11,106 @@
 
 <body>
     <header>
-
+        <img src="./images/logo.png" alt="Logo Monica Hidalgo">
+        <nav>
+            <ul>
+                <li><a href="">About me</a></li>
+                <li><a href="">Projects</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
     </header>
+    <main>
+        <section>
+            <h1>Web Developer</h1>
+            <h2>I entered the world of code and now I can't stop.</h2>
+            <img src="./images/main-img.png" alt="Logo Monica Hidalgo">
+        </section>
+        <section>
+            <h2>Hi, I'm Mónica. Nice to meet you.</h2>
+            <p>After exploiting my proactive and organized side in the world of education and languages I retrained
+                myself to be a web developer.
+            </p>
+            <p>I'm always in search of new career and learning challenges
+                and I found in the tech sector the opportunity to learn and enjoy my creative self and my
+                problem-solving approach. </p>
+            <p>What am I attracted to the most about the tech world?
+                Working cooperatively as part of a team, daily challenges
+                to keep your mind active, and the possibility to work in
+                international and multidisciplinary environments.</p>
+            <div>
+                <div>in</div>
+                <div>CV</div>
+            </div>
+        </section>
+        <section>
+            <article>
+                <div></div>
+                <h3>Other Skills</h3>
+                <p>I have experience with:</p>
+                <ul>
+                    <li>Agile Philosophy</li>
+                    <li>Scrum Methodology</li>
+                    <li>Pair Programming</li>
+                    <li>Team Programming</li>
+                    <li>Responsive Design</li>
+                    <li>Team management</li>
+                    <li>Fluent English</li>
+                </ul>
+            </article>
+            <article>
+                <div></div>
+                <h3>Front End</h3>
+                <p>Languages I speak:</p>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>SASS</li>
+                    <li>Javascript</li>
+                    <li>React</li>
+                    <li>GIT</li>
+                </ul>
+                <p>Dev Tools:</p>
+                <ul>
+                    <li>Bootstrap</li>
+                    <li>GitHub</li>
+                    <li>VS Code</li>
+                    <li>Gulp</li>
+                    <li>Terminal</li>
+                    <li>Zeplin</li>
+                </ul>
+            </article>
+            <article>
+                <div></div>
+                <h3>Back End</h3>
+                <p>Basic Backend Knowledge:</p>
+                <ul>
+                    <li>Node JS</li>
+                    <li>Express JS</li>
+                    <li>APIS</li>
+                    <li>SQL</li>
+                </ul>
+            </article>
+        </section>
+        <section>
+            <h2>My projects</h2>
+            <p>Here are some of the projects I've work on. Want to know more? <a href=""></a>Email me.</a></p>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </section>
+        <section>
+            <h2>Do you want to talk?</h2>
+            <p>I'm always open to discussing working opportunities.</p>
+            <a href="">Start a conversation</a>
+        </section>
+    </main>
 
 </body>
 
