Change icon of tab

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Unbounded:wght@700&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/2eec946f56.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/png" href="./images/logo.png">
+    <link rel="icon" type="image/png" href="./images/miniatura.png">
     <link rel="stylesheet" href="./styles.css">
 </head>
 
