Create Responsive Design for tablet and mobile

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 to keep your mind active, and the possibility to work in
                 international and multidisciplinary environments.</p>
             <div class="about__media">
-                <a class="about__media--fb" href="www.linkedin.com/in/monicahidalgomartin"><i
+                <a class="about__media--fb" href="https://www.linkedin.com/in/monicahidalgomartin"><i
                         class="fa-brands fa-linkedin-in"></i></a>
                 <a class="about__media--cv" href="#">CV<a>
             </div>
@@ -91,7 +91,7 @@
             <article class="skills__box">
                 <div class="skills__box--icon"><i class="fa-solid fa-database"></i></div>
                 <h3 class="skills__box--title">Back End</h3>
-                <p class="skills__box--subtitle">Basic Backend Knowledge:</p>
+                <p class="skills__box--subtitle">Backend Knowledge:</p>
                 <ul class="skills__box--list">
                     <li>Node JS</li>
                     <li>Express JS</li>
@@ -105,32 +105,23 @@
             <p class="projects__subtitle">Here are some of the projects I've worked on. Want to know more? <a
                     class="projects__subtitle--link" href="./index.html#talk">Email me.</a></p>
             <div class="projects__list">
-                <a href="#">
-                    <div class="projects__list--item"></div>
+                <a href="https://mhidalgoma.github.io/breaking-bad-character-finder/">
+                    <div class="projects__list--item breaking-bad"></div>
                 </a>
-                <a href="#">
-                    <div class="projects__list--item"></div>
+                <a href="https://mhidalgoma.github.io/profile-cards-star-cards/index.html">
+                    <div class="projects__list--item star-cards"></div>
                 </a>
-                <a href="#">
-                    <div class="projects__list--item"></div>
+                <a href="http://beta.adalab.es/project-promo-r-module-1-team-6/">
+                    <div class="projects__list--item leap"></div>
                 </a>
-                <a href="#">
-                    <div class="projects__list--item"></div>
+                <a href="https://mhidalgoma.github.io/hangman-game/">
+                    <div class="projects__list--item hangman"></div>
                 </a>
-                <a href="#">
-                    <div class="projects__list--item"></div>
+                <a href="https://mhidalgoma.github.io/rick-and-morty-character-finder/">
+                    <div class="projects__list--item rick-morty"></div>
                 </a>
-                <a href="#">
-                    <div class="projects__list--item"></div>
-                </a>
-                <a href="#">
-                    <div class="projects__list--item"></div>
-                </a>
-                <a href="#">
-                    <div class="projects__list--item"></div>
-                </a>
-                <a href="#">
-                    <div class="projects__list--item"></div>
+                <a href="https://mhidalgoma.github.io/company-landing-page/">
+                    <div class="projects__list--item proxy"></div>
                 </a>
 
             </div>
