--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <title>Monica Hidalgo</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Unbounded:wght@700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2eec946f56.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="./images/miniatura.png">
     <link rel="stylesheet" href="./styles.css">
