Add hover effect to miniature of projects

--- a/index.html
+++ b/index.html
@@ -104,22 +104,22 @@
             <p class="projects__subtitle">Here are some of the projects I've worked on. Want to know more? <a
                     class="projects__subtitle--link" href="./index.html#talk">Email me.</a></p>
             <div class="projects__list">
-                <a href="https://mhidalgoma.github.io/breaking-bad-character-finder/">
+                <a href="https://mhidalgoma.github.io/breaking-bad-character-finder/" target="_blank">
                     <div class="projects__list--item breaking-bad"></div>
                 </a>
-                <a href="https://mhidalgoma.github.io/profile-cards-star-cards/index.html">
+                <a href="https://mhidalgoma.github.io/profile-cards-star-cards/index.html" target="_blank">
                     <div class="projects__list--item star-cards"></div>
                 </a>
-                <a href="http://beta.adalab.es/project-promo-r-module-1-team-6/">
+                <a href="http://beta.adalab.es/project-promo-r-module-1-team-6/" target="_blank">
                     <div class="projects__list--item leap"></div>
                 </a>
-                <a href="https://mhidalgoma.github.io/hangman-game/">
+                <a href="https://mhidalgoma.github.io/hangman-game/" target="_blank">
                     <div class="projects__list--item hangman"></div>
                 </a>
-                <a href="https://mhidalgoma.github.io/rick-and-morty-character-finder/">
+                <a href="https://mhidalgoma.github.io/rick-and-morty-character-finder/" target="_blank">
                     <div class="projects__list--item rick-morty"></div>
                 </a>
-                <a href="https://mhidalgoma.github.io/company-landing-page/">
+                <a href="https://mhidalgoma.github.io/company-landing-page/" target="_blank">
                     <div class="projects__list--item proxy"></div>
                 </a>
 
