Add downloadable cv document

--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
                 international and multidisciplinary environments.</p>
             <div class="about__media">
                 <a class="about__media--fb" href="https://www.linkedin.com/in/monicahidalgomartin"><i
-                        class="fa-brands fa-linkedin-in"></i></a>
-                <a class="about__media--cv" href="#">CV<a>
+                        class="fa-brands fa-linkedin-in" target="_blank"></i></a>
+                <a class="about__media--cv" href="./documents/Mónica Hidalgo CV (eng).pdf"
+                    download="cv-monica-hidalgo">CV<a>
             </div>
         </section>
         <section class="skills">
