Update CV document

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="about__media">
                 <a class="about__media--fb" href="https://www.linkedin.com/in/monicahidalgomartin"><i
                         class="fa-brands fa-linkedin-in" target="_blank"></i></a>
-                <a class="about__media--cv" href="./documents/Mónica Hidalgo CV (eng).pdf"
+                <a class="about__media--cv" href="./documents/Monica Hidalgo CV (eng).pdf"
                     download="cv-monica-hidalgo">CV<a>
             </div>
         </section>
