Update CV to add Piscine 42 and update skills with bash and C

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="about__media">
                 <a class="about__media--fb" href="https://www.linkedin.com/in/monicahidalgomartin"><i
                         class="fa-brands fa-linkedin-in" target="_blank"></i></a>
-                <a class="about__media--cv" href="./documents/Monica Hidalgo CV (eng).pdf"
+                <a class="about__media--cv" href="./documents/Mónica Hidalgo CV (eng).pdf"
                     download="cv-monica-hidalgo">CV<a>
             </div>
         </section>
@@ -84,7 +84,7 @@
                     <li>GitHub</li>
                     <li>VS Code</li>
                     <li>Gulp</li>
-                    <li>Terminal</li>
+                    <li>Bash</li>
                     <li>Zeplin</li>
                 </ul>
             </article>
@@ -95,6 +95,7 @@
                 <ul class="skills__box--list">
                     <li>Node JS</li>
                     <li>Express JS</li>
+                    <li>C</li>
                     <li>APIS</li>
                     <li>SQL</li>
                 </ul>
