Add dino game project to projects section

--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
             <p class="projects__subtitle">Here are some of the projects I've worked on. Want to know more? <a
                     class="projects__subtitle--link" href="./index.html#talk">Email me.</a></p>
             <div class="projects__list">
+                <a href="https://mhidalgoma.github.io/Dinosaur-game/" target="_blank">
+                    <div class="projects__list--item dino"></div>
+                </a>
                 <a href="https://mhidalgoma.github.io/breaking-bad-character-finder/" target="_blank">
                     <div class="projects__list--item breaking-bad"></div>
                 </a>
@@ -124,7 +127,6 @@
                 <a href="https://mhidalgoma.github.io/company-landing-page/" target="_blank">
                     <div class="projects__list--item proxy"></div>
                 </a>
-
             </div>
         </section>
         <section id="talk" class="talk">
