Add new landing page olive oil

--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
                 <a href="https://mhidalgoma.github.io/Dinosaur-game/" target="_blank">
                     <div class="projects__list--item dino"></div>
                 </a>
+                <a href="https://mhidalgoma.github.io/company-landing-page/" target="_blank">
+                    <div class="projects__list--item olive"></div>
+                </a>
                 <a href="https://mhidalgoma.github.io/breaking-bad-character-finder/" target="_blank">
                     <div class="projects__list--item breaking-bad"></div>
                 </a>
@@ -124,9 +127,7 @@
                 <a href="https://mhidalgoma.github.io/rick-and-morty-character-finder/" target="_blank">
                     <div class="projects__list--item rick-morty"></div>
                 </a>
-                <a href="https://mhidalgoma.github.io/company-landing-page/" target="_blank">
-                    <div class="projects__list--item proxy"></div>
-                </a>
+
             </div>
         </section>
         <section id="talk" class="talk">
