Add new languages and skills

--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
                 <p class="skills__box--subtitle">Languages I speak:</p>
                 <ul class="skills__box--list">
                     <li>HTML</li>
-                    <li>CSS</li>
-                    <li>SASS</li>
+                    <li>CSS / Sass</li>
                     <li>Javascript</li>
+                    <li>Typescript</li>
+                    <li>Angular</li>
                     <li>React</li>
                     <li>GIT</li>
                 </ul>
                 <p class="skills__box--subtitle">Dev Tools:</p>
                 <ul class="skills__box--list">
                     <li>Bootstrap</li>
-                    <li>GitHub</li>
-                    <li>VS Code</li>
+                    <li>GitHub / GitLab</li>
                     <li>Gulp</li>
                     <li>Bash</li>
                     <li>Zeplin</li>
@@ -96,6 +96,7 @@
                     <li>Node JS</li>
                     <li>Express JS</li>
                     <li>C</li>
+                    <li>C#</li>
                     <li>APIS</li>
                     <li>SQL</li>
                 </ul>
